[package]
name = "secret_ref"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = {version = "0.13.1", optional = true }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs"], optional = true }
toml = "0.9.11"
url = "2.5.8"

[features]
fetch = ["dep:tokio", "dep:reqwest"]
default = ["fetch"]
